static/mystyles.css
h1 {
    text-align: center;
    font-size: 80px;
    font-weight: bold;
    color: rgb(14, 124, 14);
}

h3 {
    text-align: center;

    font-size: 4vh;
}

h2 {
    text-align: center;
    font-weight: bold;
    font-size: 55px;
}

/* body { background: url(img/bg.jpg);
    height: 100vh; 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color:rgb(155, 174, 197);
    font-family: "Courier New", Courier, monospace;
    font-size: 20px;
} */






#ping {
    margin: auto;
    

}

#logout {
    position: absolute;
    top: 15%;
    right: 5%;
    font-size: 20px;
    margin-left: auto !important
}

.list-group {
    background-color:black;
    color: rgb(155, 174, 197);
    font-weight: bold;
  }

  /* #pageloader
  {
    background: rgba( 255, 255, 255, 0.8 );
    display: none;
    height: 100%;
    position: fixed;
    width: 100%;
    z-index: 9999;
  } */
  
  #pageloader img
  {
    left: 10%;
    margin-left: -12px;
    margin-top: -32px;
    position: absolute;
    top: 50%;
  }

/* #ping { */
    /* The image used */

  
    /* Full height */
    /* height: 100%; */
  
    /* Center and scale the image nicely */
    /* background-position: center; */
    /* background-repeat: no-repeat; */
    /* background-size: cover; */
  /* } */



  body {
    /* background-image: url('https://i.imgur.com/xhiRfL6.jpg'); */
    background-image: url('/static/img/map.jpg');
    height: 100vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
    padding-top: 70px;



    background-size: cover;
    color:rgb(17, 201, 17);
    font-family: "Courier New", Courier, monospace;
    font-size: 20px;
}

#profile-img {
    height:180px;
}
.h-80 {
    height: 80% !important;
}



#reports {
    opacity: 0.9;
    margin: auto;

}

.table {
    color:rgb(17, 201, 17);

    border-radius: 25px;
}

.navbar{
    color: green;
    opacity: 0.9;
    
}

.nav-link{
    color: green !important;
    font-weight: bold;
    font-size: 20px;
}

#navigation {
    margin-right: 15vh;
}

#loggedinas {
    font-style: italic;
    margin-right: 5vh;
}


#contact {
    display: inline-block;
    font-style: normal;
}

#footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    opacity: 0.9;

    line-height:20px;
}
#footer-reports {
    opacity: 0.9;
}


#export_button {
    margin: auto !important;
    font-weight: bold;
    width: 200px;
    font-size: 20px;
    
}

#export {
    width: 12%;
    margin: auto !important;
    padding-bottom: 1%;
    
    
  }

  #xss {
      opacity: 0.9;
      margin: auto;
  }


  #ping {
    opacity: 0.9;
    position: fixed;
    top: 15vh;
    right: 5vh;

}


#url_form {
    text-align: center;
    vertical-align: middle;
    margin-bottom: 30px;
    margin-top: 40px;
    
}

#url {
  background-color: #ced4da; 
  border-radius: 10px; 
}

#notvuln {
    opacity: 0.9;
    margin: auto;
    text-align: center;
}

#enter {
    background-color: rgb(4,93,136);
    border-color: green;
}


#register {
    background-color: rgb(4,93,136);
    border-color: green;
}

label {display:block;}
textarea { display:block;}


#urlcode {
    opacity: 0.9;
    position: fixed;
    top: 20vh;
    left: 5vh;
}

textarea {
    background-color: #ced4da; 
    border-radius: 10px; 
    padding: 10px;
}

select {
    margin-top: 10px;
    margin-bottom: 10px;
    background-color: rgb(47,52,57) !important;
    color: green;
    border-color: rgb(47,52,57);
    border-radius: 10px;
    

}



  select:checked {
    outline: none
  }

select:hover  {
    outline: none
  }
select:focus  {
    outline: none
  }
select:active  {
    outline: none
  }
select:checked  {
    outline: none
  } 

#urlcode_button{
    margin-top: 10px !important;
    margin-bottom: 10px !important;
}


#wrapper {
    font-size: 1em;
    font-family: "Courier New", Courier, monospace;
    margin: 1px auto;

    color: green;
    text-align: center;
    right: 1px !important;
    font-weight: bold;
  }

  #btc {

      font-size: 1em;
      font-family: "Courier New", Courier, monospace;

  
      color: green;
      text-align: center;
      font-weight: bold;
  }
  

